--- a/.env
+++ b/.env
@@ -1,1 +1,5 @@
 REACT_APP_API=https://js-post-api.herokuapp.com/api
+
+#firebase config
+REACT_APP_FIREBASE_API=AIzaSyBk1X5KOvOFfd32PnNZwe1pqMpJ4_BxsnA
+REACT_APP_FIREBASE_AUTH_DOMAIN=photo-app-14f88.firebaseapp.com
