--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.0",
     "bootstrap": "^4.5.3",
+    "firebase": "^7.17.1",
     "formik": "^2.2.1",
     "query-string": "^6.13.6",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-firebaseui": "^4.1.0",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
