photo api spring

--- a/.env
+++ b/.env
@@ -1,5 +1,7 @@
 REACT_APP_API=https://js-post-api.herokuapp.com/api
 
+SPRING_APP_API=http://localhost:8087
+
 #firebase config
 REACT_APP_FIREBASE_API=AIzaSyBk1X5KOvOFfd32PnNZwe1pqMpJ4_BxsnA
 REACT_APP_FIREBASE_AUTH_DOMAIN=photo-app-14f88.firebaseapp.com
