--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "@tinymce/tinymce-react": "^3.8.1",
     "axios": "^0.21.0",
     "bootstrap": "^4.5.3",
     "firebase": "^7.17.1",
@@ -21,6 +22,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
     "react-select": "^3.1.0",
+    "react-summernote": "^2.0.2",
     "reactstrap": "^8.6.0",
     "web-vitals": "^0.2.4",
     "yup": "^0.29.3"
